--- a/style.css
+++ b/style.css
@@ -875,7 +875,10 @@ h4 {
 
 @media (max-width: 767px) {
     .carte{
-        margin-top: 20px;
+        margin: 30px 30px 30px 35px;
+        width: 80%;
+        height: 50%;
+
     }
     .page-container {
         overflow-x: hidden;
