--- a/style.css
+++ b/style.css
@@ -509,7 +509,7 @@ button {
     color: #FFF;
     width: 40px;
     height: 40px;
-    position: absolute;
+    position: fixed;
     bottom: 20px;
     right: 20px;
     z-index: 500;
